--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -16,7 +16,7 @@ import DashboardWidget from '../components/DashboardWidget.astro';
       </div>
       <div class="grid small-grid-1 medium-grid-2 large-grid-3 equal-height">
         <DashboardWidget />
-        <DashboardWidget
+        <!-- <DashboardWidget
           number="+33"
           title="Products sold"
         />
@@ -24,7 +24,8 @@ import DashboardWidget from '../components/DashboardWidget.astro';
           number="-120"
           title="Images deleted"
           type="error"
-        />
+        /> -->
+        <!-- <div class="radius-large space-96" style="border: 4px dashed grey;"></div>
         <div class="radius-large space-96" style="border: 4px dashed grey;"></div>
         <div class="radius-large space-96" style="border: 4px dashed grey;"></div>
         <div class="radius-large space-96" style="border: 4px dashed grey;"></div>
@@ -32,8 +33,7 @@ import DashboardWidget from '../components/DashboardWidget.astro';
         <div class="radius-large space-96" style="border: 4px dashed grey;"></div>
         <div class="radius-large space-96" style="border: 4px dashed grey;"></div>
         <div class="radius-large space-96" style="border: 4px dashed grey;"></div>
-        <div class="radius-large space-96" style="border: 4px dashed grey;"></div>
-        <div class="radius-large space-96" style="border: 4px dashed grey;"></div>
+        <div class="radius-large space-96" style="border: 4px dashed grey;"></div> -->
       </div>
     </div>
   </section>
