--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -10,8 +10,8 @@ const interval = setInterval(async () => {
 ---
 <DefaultLayout title="Dashboard">
   <section>
-    <h1>Welcome Astronaut 🧑‍🚀</h1><br>
-    <p class="size-20">Build fast dashboards, faster (and accessible).</p>
+    <h1>Bienvenido Astronauta 🧑‍🚀</h1><br>
+    <p class="size-20">Tus cultivos a otro nivel</p>
   </section>
   <section class="margin-32">
     <div class="space-content">
@@ -21,8 +21,8 @@ const interval = setInterval(async () => {
       </div>
       <div class="grid small-grid-1 medium-grid-2 large-grid-3 equal-height">
         <DashboardWidget
-          temp= {lechuga.temperature}
-          hum= {lechuga.humidity}
+          temp= {lechuga?.temperature}
+          hum= {lechuga?.humidity}
           title="Lechugas"
         />
         <div class="radius-large space-96" style="border: 4px dashed grey;"></div>
@@ -33,8 +33,6 @@ const interval = setInterval(async () => {
         <div class="radius-large space-96" style="border: 4px dashed grey;"></div>
         <div class="radius-large space-96" style="border: 4px dashed grey;"></div>
         <div class="radius-large space-96" style="border: 4px dashed grey;"></div>
-        <div class="radius-large space-96" style="border: 4px dashed grey;"></div>
-        <div class="radius-large space-96" style="border: 4px dashed grey;"></div> -->
       </div>
     </div>
   </section>
@@ -42,5 +40,5 @@ const interval = setInterval(async () => {
 
 <script>
   const date = new Date()
-  //document.querySelector('#current-time').innerHTML = `<em>${date.toDateString()}</em>`
+  document.querySelector('#current-time').innerHTML = `<em>${date.toDateString()}</em>`
 </script>
